--- a/info_utili.css
+++ b/info_utili.css
@@ -76,6 +76,8 @@ body{
 
 #main-nav.open {
   display: flex;
+  background: rgba(0,0,0,0.25);
+  backdrop-filter: blur(10px);
 }
 
 /* BACK LINK (solo pagine secondarie) */
@@ -352,7 +354,7 @@ body{
 
   background-image: url('elements/gen.JPG');
   background-size:cover;
-  background-position: center;
+  background-position: center ;
   background-repeat: no-repeat;
   /* Mobile: niente parallax */
   background-attachment: scroll;
