--- a/info_utili.css
+++ b/info_utili.css
@@ -458,3 +458,11 @@ body{
     font-size: 1.05rem;
   }
 }
+
+footer {
+  color: black;
+  background: #F7F6F0;
+  text-align: center;
+  padding: 40px 0;
+  font-size: 0.9rem;
+}
